@@ -1,3 +1,9 @@
+2006-08-20  Benoît Dejean  <benoit@placenet.org>
+
+	* src/disks.c: (create_disk_view):
+
+	Right aligned size columns.
+
 2006-08-19  Benoît Dejean  <benoit@placenet.org>
 
 	* src/memmaps.c: (create_memmapsdata):
